    result codes]

* XINS/Java Server Framework:
  - If the org.xins.server.config is not set as a system property, the server
    will also try to get the org.xins.server.config from the bootstrap
    properties.
  - Fixed bug #1076638: The generated context ID was not conform to the
    architect group recommendation.
  - Changed the deprecated org.xins.server.Element with 
    org.xins.common.xml.Element.

* Logdoc:
  - The parameter types are now defined in the DTD.

* Build and release process:
  - Fixed bug #1078313: Compilation and Javadoc is done from the source code.
    Compilation and Javadoc generation will be faster.

* Generated build file:
  - Fixed bug #1078317: Compilation and Javadoc of the API is now done using 
    the files of the impl directory without copying them to the build 
    directory. This will increase compilation and javadoc generation 
    performances.

* Generation of server-side Java code:
  - An object is created for the data input parameter.

* Generation of CAPI classes:
  - Slightly improved performance by making SECRET_KEY a class field.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 4:

* XINS/Java Common Library:
  - Added class CallConfig in package org.xins.common.service. Objects of this
    type specify certain aspects of how a call is executed. For example, for
    an HTTP service caller, a CallConfig object could specify what HTTP method
    (GET, POST, etc.) to use.
  - Added HTTPCallConfig class (derives from CallConfig).
  - Changed ServiceCaller to work with CallConfig objects. Some members have
    been deprecated in favour of newer ones that work with CallConfig objects.
    Greatly improved the documentation in the ServiceCaller class [work in
    progress].
  - Added UnsupportedProtocolException in org.xins.common.service package.
    Documented in ServiceCaller class that this exception should be thrown by